# RSNA

./: .gitignore  EDA.ipynb  README.md  models.ipynb  pyproject.toml  train.ipynb
rsna_data/: expanded_test_desc.csv
rsna_data/test_images/44036939/3844393089/: 8.dcm  9.dcm
