[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
    "torch-vision>=0.1.6.dev0",
    "pydicom>=3.0.1",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.1",
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
]
